# record

./: Cargo.toml  Makefile  README.md  SECURITY.md  codama.json  codama.mjs  idl.json  package.json  pnpm-lock.yaml
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-js-client.yml  publish-js.yml  publish-rust.yml
clients/js/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
clients/js-legacy/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
clients/js-legacy/src/: actions.ts  constants.ts  index.ts  instructions.ts  state.ts
clients/js-legacy/test/: basic.ts  common.ts  longRecord.ts
clients/js-legacy/test/exports/: commonjs.cjs  module.mjs
clients/js/src/: actions.ts  constants.ts  createRecord.ts  index.ts  plugin.ts  reallocateRecord.ts  writeRecord.ts
clients/js/test/: _setup.ts  basic.test.ts  close.test.ts  createRecord.test.ts  createRecordWithSeed.test.ts  createWithSeed.test.ts  initialize.test.ts  longRecord.test.ts  reallocate.test.ts  reallocateRecord.test.ts  setAuthority.test.ts  write.test.ts
program/: Cargo.toml  build.rs  idl.json
program/idl/: spl_record.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
scripts/: restart-test-validator.sh  solana.dic  start-validator.mjs
