[package]
name = "spl-record"
version = "0.3.0"
description = "Solana Program Library Record Program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/record"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = "2.2.1"
solana-decode-error = "2.2.1"
solana-instruction = { version = "2.2.1", features = ["std"] }
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = { version = "2.2.1", features = ["bytemuck"] }
solana-rent = "2.2.1"
solana-security-txt = "1.1.1"
thiserror = "2.0.12"

[dev-dependencies]
solana-program-test = "2.2.7"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "recr1L3PCGKLbckBqMNcJhuuyU1zgo8nBhfLVsJNwr5"
